--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "cross-env": "^7.0.0",
+    "idb": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-image-file-resizer": "^0.2.1",
