--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.12.0",
     "react-image-file-resizer": "^0.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.2.0",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
