--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "serve": "serve build"
+    "serve": "serve build",
+    "cypress:run": "cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
