--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
     "serve": "serve build",
-    "cypress:run": "cypress run"
+    "cypress:ci": "PORT=5000 cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
