--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --if-present
-      - run: npm run serve & npm run cypress:ci
+      - run: npm run serve
+      - run: npm run cypress:ci
         env:
           CI: true
