--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cypress-file-upload": "^3.5.3",
     "istanbul-lib-coverage": "^3.0.0",
     "nyc": "^15.0.0",
-    "serve": "^11.3.0"
+    "serve": "^11.3.0",
+    "start-server-and-test": "^1.10.8"
   }
 }
