--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "serve": "serve build",
+    "serve": "serve build &",
     "cypress:ci": "CYPRESS_PORT=5000 cypress run"
   },
   "eslintConfig": {
